--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "express": "^4.18.2",
     "http-status-codes": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mongodb": "^6.3.0",
     "nodemon": "^3.0.1",
     "zod": "^3.22.4"
   }
